tests/gator/cases/enforce-ingress-tls-host/samples/allow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-allow-ingress
spec:
  tls:
    - secretName: demo-cert
      hosts:
        - allow.example.com
  rules:
    - host: allow.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
