tests/gator/cases/enforce-ingress-tls-host/samples/deny.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-deny-ingress
spec:
  rules:
    - host: deny.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
